Update app docs
- New <Thumbnail> component

--- a/src/pages/app/barcode.mdx
+++ b/src/pages/app/barcode.mdx
@@ -2,6 +2,8 @@
 title: App Barcode Support
 ---
 
+import Thumbnail from '@site/src/components/Thumbnail';
+
 ## Barcode Support
 
 One of the key elements of functionality provided by the InvenTree app is the native support for context-sensitive barcode scanning.
@@ -53,8 +55,7 @@ If a match is found, the app will navigate to the relevant page.
 
 From the [Stock Location detail page](./stock.md#stock-location-view), multiple barcode actions may be available:
 
-![Location barcode actions](/img/app/barcode_stock_location_actions.png)
-
+<Thumbnail src="/img/app/barcode_stock_location_actions.png" title="Stock location actions" />
 
 #### Assign Barcode
 
@@ -76,7 +77,7 @@ the *Scan Items Into Location* action allows you to scan items into the selected
 
 From the [Stock Item detail page](./stock.md#stock-item-detail-view), the following barcode actions may be available:
 
-![item actions](/img/app/barcode_stock_item_actions.png)
+<Thumbnail src="/img/app/barcode_stock_item_actions.png" title="Stock item actions" />
 
 #### Assign Barcode
 
@@ -90,7 +91,7 @@ Scan the selected stock item into a stock location. Scanning a valid barcode ass
 
 From the [Part detail page](./part.md#part-detail-view), the following barcode actions are available:
 
-![Part actions](/img/app/barcode_part_actions.png)
+<Thumbnail src="/img/app/barcode_part_actions.png" title="Part actions" />
 
 #### Assign Barcode
 
@@ -100,7 +101,7 @@ Assign a custom barcode to the selected part. Scanning a barcode (which is not a
 
 From the [Purchase Order detail page](./po.md#purchase-order-detail) page, the following barcode actions are available:
 
-![Purchase order actions](/img/app/barcode_po_actions.png)
+<Thumbnail src="/img/app/barcode_po_actions.png" title="Purchase order actions" />
 
 #### Scan Received Parts
 
