--- a/src/pages/app/index.mdx
+++ b/src/pages/app/index.mdx
@@ -68,3 +68,8 @@ To suggest an improvement or new feature for the InvenTree app, or to report an 
 
 General feedback on the app is also welcomed - if you have any ideas on how to make the app more functional or effective, please let us know!
 
+### Translation
+
+Translation for the InvenTree mobile app is provided by the [crowdin](https://crowdin.com/project/inventree) service. Contributions are welcomed and encouraged, and the process of providing or improving translated strings is extremely simple!
+
+As with the web application, translations are community contributed - if the app does not support your native language, contributions are very welcome!
