--- a/src/pages/app/po.mdx
+++ b/src/pages/app/po.mdx
@@ -2,11 +2,13 @@
 title: Purchase Orders
 ---
 
+import Thumbnail from '@site/src/components/Thumbnail';
+
 ## Purchase Order List
 
 The purchase order list display shows all current *outstanding* purchase orders. (Purchase orders which have been completed are not shown here).
 
-![Purchase order list](/img/app/po_list.png)
+<Thumbnail src="/img/app/po_list.png" title="Purchase order list" />
 
 Select an individual purchase order to display the detail view for that order.
 
@@ -16,19 +18,19 @@ Available purchase orders can be subsequently filtered using the search input at
 
 ## Purchase Order Detail
 
-![Purchase order detail](/img/app/po_detail.png)
+<Thumbnail src="/img/app/po_detail.png" title="Purchase order detail" />
 
 ### Edit Order Details
 
 From the detail view, select the *Edit* button in the top-right of the screen. This opens the purchase order editing display:
 
-![Edit purchase order](/img/app/po_edit.png)
+<Thumbnail src="/img/app/po_edit.png" title="Edit purchase order" />
 
 ### Line Items
 
 The *Line Items* tab shows the line items associated with this purchase order:
 
-![Purchase order line items](/img/app/po_lines.png)
+<Thumbnail src="/img/app/po_lines.png" title="Line items" />
 
 Long press on a particular line item to receive the item into stock.
 
@@ -36,4 +38,4 @@ Long press on a particular line item to receive the item into stock.
 
 Once items have been received into stock against a particular purchase order, they are displayed in the *Stock Items* tab:
 
-![Stock items](/img/app/po_stock.png)
+<Thumbnail src="/img/app/po_stock.png" title="Stock items" />
