--- a/src/pages/app/settings.mdx
+++ b/src/pages/app/settings.mdx
@@ -2,6 +2,8 @@
 title: App Settings
 ---
 
+import Thumbnail from '@site/src/components/Thumbnail';
+
 ## Settings
 
 The *Settings* view provides access to user configurable settings, in addition to information about the app itself.
@@ -17,13 +19,13 @@ The main settings view is shown below, and provides the following options:
 | [Part](#part-settings) | Configure part management options |
 | About | Display app version information |
 
-![Settings view](/img/app/settings.png)
+<Thumbnail src="/img/app/settings.png" title="Settings View" />
 
 ## App Settings
 
 The *App Settings* view provides configuration options for the InvenTree app:
 
-![App settings](/img/app/app_settings.png)
+<Thumbnail src="/img/app/app_settings.png" title="App settings" />
 
 ### App Settings
 
@@ -52,7 +54,7 @@ Configure audible app notifications:
 
 The *Barcode Settings* view allows you to configure options relating to [barcode scanning](./barcode.md):
 
-![Barcode settings](/img/app/barcode_settings.png)
+<Thumbnail src="/img/app/barcode_settings.png" title="Barcode settings" />
 
 | Option | Description |
 | --- | --- |
@@ -63,7 +65,7 @@ The *Barcode Settings* view allows you to configure options relating to [barcode
 
 The *Home Screen* view allows you to configure display options for the app 'home screen':
 
-![Home settings](/img/app/home_settings.png)
+<Thumbnail src="/img/app/home_settings.png" title="Home settings" />
 
 | Option | Description |
 | --- | --- |
