--- a/src/pages/app/navigation.mdx
+++ b/src/pages/app/navigation.mdx
@@ -2,18 +2,19 @@
 title: App Navigation
 ---
 
+import Thumbnail from '@site/src/components/Thumbnail';
 
 ## Home Screen
 
 The app *home screen* provides quick-access buttons for stock view and actions:
 
-![Home screen](/img/app/home.png)
+<Thumbnail src="/img/app/home.png" title="Home screen" />
 
 ## Tab Display
 
 Some screens provide multiple tabbed views, which are displayed at the top of the screen:
 
-![Tab display](/img/app/app_tabs.png)
+<Thumbnail src="/img/app/app_tabs.png" title="Tab display" />
 
 Tabs can be navigated by pressing on the text of each tab, or by scrolling the screen left or right.
 
@@ -21,13 +22,13 @@ Tabs can be navigated by pressing on the text of each tab, or by scrolling the s
 
 The *Global Action* buttons are visible on most screens, displayed in the bottom left corner of the screen:
 
-![Global navigation](/img/app/app_global_navigation.png)
+<Thumbnail src="/img/app/app_global_navigation.png" title="Global navigation" />
 
 ### Open Drawer Menu
 
 The <span class='fas fa-list'></span> action opens the *Drawer Menu*, which is a quick-access menu for global navigation:
 
-![Drawer menu](/img/app/drawer.png)
+<Thumbnail src="/img/app/drawer.png" title="Drawer menu" />
 
 The *Drawer Menu* can be accessed in the following ways:
 
@@ -36,17 +37,18 @@ The *Drawer Menu* can be accessed in the following ways:
 
 ### Search
 
-The <span class='fas fa-search'></span> action opens the [Search](./search.md) screen
+The *search* action opens the [Search](./search.md) screen
 
 ### Scan Barcode
 
-The <span class='fas fa-qrcode'></span> action opens the [barcode scan](./barcode.md#global-scan) window, which allows quick access to the barcode scanning functionality.
+The *barcode* action opens the [barcode scan](./barcode.md#global-scan) window, which allows quick access to the barcode scanning functionality.
 
 ## Context Actions
 
 Within a given view, certain context actions may be available. If there are contextual actions which can be performed, they are displayed in the bottom right corner:
 
-![Context actions](/img/app/context_actions.png)
+<Thumbnail src="/img/app/context_actions.png" title="Context actions" />
 
-!!! tip "Barcode Actions"
-    Available barcode actions are displayed in a separate context action menu
+:::tip Barcode Actions
+Available barcode actions are displayed in a separate context action menu
+:::
