--- a/src/pages/app/part.mdx
+++ b/src/pages/app/part.mdx
@@ -2,6 +2,8 @@
 title: Part Views
 ---
 
+import Thumbnail from '@site/src/components/Thumbnail';
+
 ## Part Category View
 
 From the *home screen*, select *Parts* to open the top-level part category view.
@@ -10,8 +12,7 @@ From the *home screen*, select *Parts* to open the top-level part category view.
 
 The *Details* tab shows information about the selected part category. In particular, it shows the name and description of the category, a link to the parent category (if available) and a list of subcategories.
 
-![Part category detail](/img/app/part_category_detail.png)
-
+<Thumbnail src="/img/app/part_category_detail.png" title="Part category detail" />
 
 #### Parent Category
 
@@ -25,38 +26,39 @@ If the current category has any subcategories, these are listed here. Select any
 
 The *Parts* tab displays all the parts available in this category. Tap a displayed part to navigate to the part detail view.
 
-![Category parts tab](/img/app/category_parts_tab.png)
+<Thumbnail src="/img/app/category_parts_tab.png" title="Category parts" />
 
 The list of available parts can be filtered using the input box at the top of the screen:
 
-![Category parts filter](/img/app/category_parts_filter.png)
+<Thumbnail src="/img/app/category_parts_filter.png" title="category parts filter" />
 
 ### Context Actions
 
 The following *Context Actions* are available for the selected category:
 
-![Category actions](/img/app/category_actions_tab.png)
+<Thumbnail src="/img/app/category_actions_tab.png" title="Category actions" />
 
 #### New Category
 
 Create a new subcategory under the current category:
 
-![New category](/img/app/new_category.jpg)
+<Thumbnail src="/img/app/new_category.jpg" title="New category" />
 
 #### New Part
 
 Create a new part within the current category:
 
-![New part](/img/app/new_part.jpg)
+<Thumbnail src="/img/app/new_part.jpg" title="New part" />
 
 ### Edit Category
 
 Select the *Edit* button in the top right corner of the screen to edit the details for the selected part category:
 
-![Edit category](/img/app/part_category_edit.jpg)
+<Thumbnail src="/img/app/part_category_edit.jpg" title="Edit category" />
 
-!!! info "Permission Required"
-    If the user does not have permission to edit part details, this button will be hidden
+:::info Permission Required
+If the user does not have permission to edit part details, this button will be hidden
+:::
 
 In the part category display screen, there are three tabs of information available:
 
@@ -64,7 +66,7 @@ In the part category display screen, there are three tabs of information availab
 
 The *Part Detail* view displays information about a single part:
 
-![Part details](/img/app/part_details.png)
+<Thumbnail src="/img/app/part_details.png" title="Part details" />
 
 ### Details Tab
 
@@ -82,13 +84,13 @@ The *stock* tile shows the total quantity of stock available for the part. Tap o
 
 Tap on the *notes* tile to view (and edit) the notes for this part:
 
-![Part notes](/img/app/part_notes.jpg)
+<Thumbnail src="/img/app/part_notes.jpg" title="Part notes" />
 
 #### Attachments
 
 Tap on the *attachments* tile to view the file attachments for this part:
 
-![Part attachments](/img/app/part_attachments.jpg)
+<Thumbnail src="/img/app/part_attachments.jpg" title="Part attachments" />
 
 New attachments can be uploaded by tapping on the icons in the top right of the screen.
 
@@ -98,7 +100,7 @@ Select a particular attachment file to downloaded it to the local device.
 
 The *Stock* tab displays all the stock items available for this part. Tap on a particular stock item to navigate to a detail view for that item.
 
-![Part stock](/img/app/part_stock.png)
+<Thumbnail src="/img/app/part_stock.png" title="Part stock" />
 
 The list of available stock items can be filtered using the input box at the top of the screen.
 
@@ -110,21 +112,22 @@ The *Actions* tab displays the available actions for the selected part:
 
 Create a new stock item for this part:
 
-![New stock item](/img/app/new_stock_item.jpg)
+<Thumbnail src="/img/app/new_stock_item.jpg" title="New stock item" />
 
 ### Edit Part
 
 To edit the part details, select the *Edit* button in the top right corner of the screen:
 
-![Edit part](/img/app/part_edit.jpg)
+<Thumbnail src="/img/app/part_edit.jpg" title="Edit part" />
 
-!!! info "Permission Required"
-    If the user does not have permission to edit part details, this button will be hidden
+:::info Permission Required
+If the user does not have permission to edit part details, this button will be hidden
+:::
 
 ### Part Image View
 
 Tap the image of the part (displayed at the top left of the screen) to launch the part image view:
 
-![Part image](/img/app/part_image.jpg)
+<Thumbnail src="/img/app/part_image.jpg" title="Part image" />
 
 A full-screen view of the image is displayed. The user can also upload a new image for the part, either selecting an image from the device, or taking a new picture with the device's camera.
