Refactor existing blog posts

--- a/blog/2021-11-22-translation.mdx
+++ b/blog/2021-11-22-translation.mdx
@@ -3,6 +3,10 @@ authors: oliver
 title: Translating InvenTree
 ---
 
+import Thumbnail from '@site/src/components/Thumbnail';
+
+## Translating InvenTree
+
 How we provide translation support for InvenTree in multiple languages
 
 ### Community Contributed Translations
@@ -11,7 +15,7 @@ At the time of writing, InvenTree provides language translations for 25 language
 
 Translation progress can be viewed on our [Crowdin project page](https://crowdin.com/project/inventree). Here you can view the current status of the translation efforts:
 
-![Translation](/img/blog/2022-11-22-translation.png)
+<Thumbnail src="/img/blog/2022-11-22-translation.png" title="Translation" />
 
 ### Translation Pipeline
 
