--- a/blog/2023-01-02-upcoming.mdx
+++ b/blog/2023-01-02-upcoming.mdx
@@ -3,6 +3,10 @@ authors: oliver
 title: 2022 in Review
 ---
 
+import Thumbnail from '@site/src/components/Thumbnail';
+
+## 2022 in Review
+
 2022 was a huge year for the InvenTree project.
 
 ### Release Milestones
@@ -33,7 +37,7 @@ Our new website (inventree.org) is now up and running! Thanks to @matmair in par
 
 ### Translations
 
-[Translations](/contribute#translate) for the InevnTree project continue to grow, thanks to our vibrant community of users. Thanks to the [crowdin project](https://crowdin.com) which makes this possible.
+[Translations](/contribute#translate) for the InvenTree project continue to grow, thanks to our vibrant community of users. Thanks to the [crowdin project](https://crowdin.com) which makes this possible.
 
 ### Users
 
@@ -41,7 +45,7 @@ And finally, thanks to our users! In 2022 we went from 500 stars on GitHub, to o
 
 The GitHub stargazers data gives us a picture of where InvenTree is being used - we've gone global!
 
-![Star Map](/img/blog/world-map.png)
+<Thumbnail src="/img/blog/world-map.png" title="World map" />
 
 *Location data were obtained from GitHub stars metadata - InvenTree software does not track user location!*
 
@@ -89,6 +93,6 @@ Check out the [documentation project](https://github.com/inventree/inventree-doc
 
 The InvenTree project has grown substantially over the last year. While we now have an active user community, we still only have a very small core development team, trying to keep on top of all the great ideas you have.
 
-If you have found InvenTree to be a useful piece of software, especially if you are using it for your business, please consider [sponsoring the project](https://github.com/sponsors/inventree/). Sponsorship allows the devs to provide more of their (quite precious) time to the project, which benefits everyone.
+If you have found InvenTree to be a useful piece of software, especially if you are using it for your business, please consider [sponsoring the project](https://github.com/sponsors/inventree/). Sponsorship allows the developers to provide more of their (quite precious) time to the project, which benefits everyone.
 
 You can provide a one-off or monthly sponsorship, or sponsor a specific feature or plugin!
