--- a/blog/2023-08-28-react.md
+++ b/blog/2023-08-28-react.md
@@ -3,6 +3,8 @@ authors: oliver
 title: User Interface Refactor
 ---
 
+## User Interface Refactor
+
 The InvenTree development team is thrilled to share some exciting news about the ongoing efforts to significantly overhaul our user interface. To provide a major facelift to InvenTree, we are migrating our entire user interface to the [React](https://react.dev/) framework.
 
 ### A Brief History
