--- a/blog/2022-12-12-0.9.0.mdx
+++ b/blog/2022-12-12-0.9.0.mdx
@@ -3,6 +3,10 @@ authors: oliver
 title: 0.9.0 Stable Release
 ---
 
+import Thumbnail from '@site/src/components/Thumbnail';
+
+## 0.9.0 Stable Release
+
 The InvenTree team is very excited to announce the InvenTree 0.9.0 Stable Release!
 
 This release is the culmination of many hours of work from multiple developers, providing numerous new features and bug fixes. We extend our thanks to the contributors who have helped on this release, as well as the users who have suggested new features or helped us track down outstanding software issues.
@@ -13,7 +17,7 @@ The 0.9.0 release introduces many new features - some of the major ones are outl
 
 ### Installer
 
-We now have a packaged command-line installer for simplified setup (on supported platforms), using the [packager.io](https://packager.io/) service. The installer is targetted for users who are installing InvenTree on a bare metal system (separate installers are available for container environments).
+We now have a packaged command-line installer for simplified setup (on supported platforms), using the [packager.io](https://packager.io/) service. The installer is targeted for users who are installing InvenTree on a bare metal system (separate installers are available for container environments).
 
 You can find more information about the installer at [docs.inventree.org](https://docs.inventree.org/en/latest/start/installer/).
 
@@ -23,9 +27,9 @@ Database backup and restore functionality has been improved, using the [dbbackup
 
 ### Pricing Overhaul
 
-This release provides a major overhaul for how pricing data is managed. The new pricing system calculates various pricing information (such as BOM cost or purchase price range) and caches this data in the database. This means that the efficiency of accessing pricing data in real time is greatly improved. For complex bills of material, viewing pricing data was (before this update) extremely prohibitive, due to the recursive calculations which were being performed "on the fly". The new achitecture makes use of the background worker to recalculate pricing information whenever the underlying data changes, ensuring that "up to date" pricing is readily available.
+This release provides a major overhaul for how pricing data is managed. The new pricing system calculates various pricing information (such as BOM cost or purchase price range) and caches this data in the database. This means that the efficiency of accessing pricing data in real time is greatly improved. For complex bills of material, viewing pricing data was (before this update) extremely prohibitive, due to the recursive calculations which were being performed "on the fly". The new architecture makes use of the background worker to recalculate pricing information whenever the underlying data changes, ensuring that "up to date" pricing is readily available.
 
-![BOM Pricing](/img/blog/bom-pricing.png)
+<Thumbnail src="/img/blog/bom-pricing.png" title="BOM Pricing"/>
 
 Additionally, more options for controlling how pricing information is calculated and handled have been implemented.
 
@@ -57,7 +61,7 @@ Now that the new website is live, a [news feed](/news) is available. If enabled,
 
 *Note that this feature is disabled by default, and must be enabled by a staff user*
 
-![News Reader](/img/blog/news-reader.png)
+<Thumbnail src="/img/blog/news-reader.png" title="News reader" />
 
 ### Part Scheduling
 
