--- a/blog/2023-09-26-kicad.md
+++ b/blog/2023-09-26-kicad.md
@@ -3,6 +3,8 @@ authors: oliver
 title: KiCad Integration
 ---
 
+## KiCad Integration
+
 In the world of electronics design and PCB (Printed Circuit Board) development, KiCad has been a go-to tool for engineers and hobbyists alike. KiCad is a very popular and capable tool, and has continually evolved to meet the changing needs of its users.
 
 Ever since InvenTree was first [*shamlessly cross-promoted*](https://forum.kicad.info/t/inventory-management-open-source/18849) on the KiCad forums, I have been searching for a clean way to connect KiCad and InvenTree together. This has been a [popular topic of discussion](https://github.com/inventree/InvenTree/discussions/4133) with other InvenTree users too!
