--- a/src/pages/app/stock.mdx
+++ b/src/pages/app/stock.mdx
@@ -126,8 +126,7 @@ This barcode can then be used to track the stock item.
 
 #### Print Label
 
-If the server supports [label printing plugins](../extend/plugins/label.md), then an option to print a label for the selected stock item:
-
+If the server supports label printing, then an option to print a label for the selected stock item:
 
 <Thumbnail src="/img/app/stock_print_label_1.png" />
 
