More links fixes

--- a/src/pages/app/barcode.mdx
+++ b/src/pages/app/barcode.mdx
@@ -53,7 +53,7 @@ If a match is found, the app will navigate to the relevant page.
 
 ### Stock Location Actions
 
-From the [Stock Location detail page](/app/stock.md#stock-location-view), multiple barcode actions may be available:
+From the [Stock Location detail page](/app/stock#stock-location-view), multiple barcode actions may be available:
 
 <Thumbnail src="/img/app/barcode_stock_location_actions.png" title="Stock location actions" />
 
@@ -75,7 +75,7 @@ the *Scan Items Into Location* action allows you to scan items into the selected
 
 ### Stock Item Actions
 
-From the [Stock Item detail page](/app/stock.md#stock-item-detail-view), the following barcode actions may be available:
+From the [Stock Item detail page](/app/stock#stock-item-detail-view), the following barcode actions may be available:
 
 <Thumbnail src="/img/app/barcode_stock_item_actions.png" title="Stock item actions" />
 
@@ -89,7 +89,7 @@ Scan the selected stock item into a stock location. Scanning a valid barcode ass
 
 ### Part Actions
 
-From the [Part detail page](/app/part.md#part-detail-view), the following barcode actions are available:
+From the [Part detail page](/app/part#part-detail-view), the following barcode actions are available:
 
 <Thumbnail src="/img/app/barcode_part_actions.png" title="Part actions" />
 
@@ -99,7 +99,7 @@ Assign a custom barcode to the selected part. Scanning a barcode (which is not a
 
 ### Purchase Order Actions
 
-From the [Purchase Order detail page](/app/po.md#purchase-order-detail) page, the following barcode actions are available:
+From the [Purchase Order detail page](/app/po#purchase-order-detail) page, the following barcode actions are available:
 
 <Thumbnail src="/img/app/barcode_po_actions.png" title="Purchase order actions" />
 
