--- a/src/pages/app/navigation.mdx
+++ b/src/pages/app/navigation.mdx
@@ -37,11 +37,11 @@ The *Drawer Menu* can be accessed in the following ways:
 
 ### Search
 
-The *search* action opens the [Search](/app/search.md) screen
+The *search* action opens the [Search](/app/search) screen
 
 ### Scan Barcode
 
-The *barcode* action opens the [barcode scan](/app/barcode.md#global-scan) window, which allows quick access to the barcode scanning functionality.
+The *barcode* action opens the [barcode scan](/app/barcode#global-scan) window, which allows quick access to the barcode scanning functionality.
 
 ## Context Actions
 
