--- a/src/pages/app/privacy.mdx
+++ b/src/pages/app/privacy.mdx
@@ -58,5 +58,5 @@ The uploaded error reports contain information on the nature of the error / bug;
 :::
 
 :::tip Disable Error Reporting
-If desired, users can disable error reporting entirely, from within the [app settings](/app/settings.md). This prevents any error logs from being uploaded to the sentry server.
+If desired, users can disable error reporting entirely, from within the [app settings](/app/settings). This prevents any error logs from being uploaded to the sentry server.
 :::
