--- a/src/pages/app/settings.mdx
+++ b/src/pages/app/settings.mdx
@@ -12,7 +12,7 @@ The main settings view is shown below, and provides the following options:
 
 | Option | Description |
 | --- | --- |
-| [Server](/app/connect.md) | Select server profile and configure settings |
+| [Server](/app/connect) | Select server profile and configure settings |
 | [App Settings](#app-settings) | Configure app settings |
 | [Barcode Settings](#barcode-settings) | Configure barcode scanning settings |
 | [Home Screen](#home-screen) | Configure home screen options |
@@ -52,7 +52,7 @@ Configure audible app notifications:
 
 ## Barcode Settings
 
-The *Barcode Settings* view allows you to configure options relating to [barcode scanning](/app/barcode.md):
+The *Barcode Settings* view allows you to configure options relating to [barcode scanning](/app/barcode):
 
 <Thumbnail src="/img/app/barcode_settings.png" title="Barcode settings" />
 
