--- a/_posts/2023-12-15-0.13.0.md
+++ b/_posts/2023-12-15-0.13.0.md
@@ -3,7 +3,7 @@ author: SchrodingersGat
 title: 0.13.0 Stable Release
 ---
 
-The InvenTree development team is very excited to announce the latest stable release of InvenTree - v0.13.0. This represents the largest release of InvenTree to date, with over 450 pull requests since the [0.12.0 stable release](./2023-06-26-0.12.0.md).
+The InvenTree development team is very excited to announce the latest stable release of InvenTree - v0.13.0. This represents the largest release of InvenTree to date, with over 450 pull requests since the [0.12.0 stable release]({% link blog/2023-06-26-0.12.0.md %}).
 
 ## New Contributors
 
@@ -85,7 +85,7 @@ Barcode scanning support received some significant improvements in this release:
 
 #### Vendor Barcode Scanning
 
-[PR #5509](https://github.com/inventree/InvenTree/pull/5509) presents major new functionality for barcode scanning. InvenTree now supports a number of vendor barcodes. Incoming goods can be scanned directly into stock, and received against a purchase order. Read [our blog post](./2023-10-29-barcodes.md) for a more detailed overview of the new barcode scanning features.
+[PR #5509](https://github.com/inventree/InvenTree/pull/5509) presents major new functionality for barcode scanning. InvenTree now supports a number of vendor barcodes. Incoming goods can be scanned directly into stock, and received against a purchase order. Read [our blog post]({% link blog/2023-10-29-barcodes.md %}) for a more detailed overview of the new barcode scanning features.
 
 #### Allocate Items to Sales Order
 
@@ -101,7 +101,7 @@ As well as new features, this release includes a number of bug fixes and improve
 
 ## User Interface Refactor
 
-We have continued to work towards the goal of [refactoring the user interface](./2023-08-28-react.md). The new frontend is progressing well, and we hope to have it fully available for the next release. The new frontend is written in React, and will provide a more modern user interface for InvenTree.
+We have continued to work towards the goal of [refactoring the user interface]({% link blog/2023-08-28-react.md %}). The new frontend is progressing well, and we hope to have it fully available for the next release. The new frontend is written in React, and will provide a more modern user interface for InvenTree.
 
 There are still a number of features which are not yet available in the new frontend, and we are working hard to ensure that the new frontend is feature complete before we release it. Please consider contributing to the frontend development effort if you would like to help out!
 
