--- a/_posts/2023-12-15-0.13.0.md
+++ b/_posts/2023-12-15-0.13.0.md
@@ -122,6 +122,10 @@ Please consider contributing to the project by [submitting a pull request](https
 
 For a full list of changes, please see the [release notes on GitHub](https://github.com/inventree/InvenTree/releases/tag/0.13.0)
 
+### Release Cycle
+
+Moving forward, we will be releasing stable versions on a quicker release cycle. We hope to release a new stable version every 3 months, to keep up with the rapid development of the project. This will allow us to get new features into the hands of our users more quickly, and will also allow us to release bug fixes more quickly. Thanks to the efforts of our contributors, we have been able to significantly increase the pace of development, and we hope to continue this trend!
+
 ## Deploying InvenTree
 
 If you are new to the InvenTree project, there are multiple ways to deploy InvenTree for your own use. Please refer to the [deployment guide]({% link deploy.md %}) for more information.
