--- a/_posts/2022-12-12-0.9.0.md
+++ b/_posts/2022-12-12-0.9.0.md
@@ -13,7 +13,7 @@ The 0.9.0 release introduces many new features - some of the major ones are outl
 
 ### Installer
 
-We now have a packaged command-line installer for simplified setup (on supported platforms), using the [packager.io](https://packager.io/) service. The installer is targetted for users who are installing InvenTree on a bare metal system (separate installers are available for container environments).
+We now have a packaged command-line installer for simplified setup (on supported platforms), using the [packager.io](https://packager.io/) service. The installer is targeted for users who are installing InvenTree on a bare metal system (separate installers are available for container environments).
 
 You can find more information about the installer at [docs.inventree.org](https://docs.inventree.org/en/latest/start/installer/).
 
@@ -23,7 +23,7 @@ Database backup and restore functionality has been improved, using the [dbbackup
 
 ### Pricing Overhaul
 
-This release provides a major overhaul for how pricing data is managed. The new pricing system calculates various pricing information (such as BOM cost or purchase price range) and caches this data in the database. This means that the efficiency of accessing pricing data in real time is greatly improved. For complex bills of material, viewing pricing data was (before this update) extremely prohibitive, due to the recursive calculations which were being performed "on the fly". The new achitecture makes use of the background worker to recalculate pricing information whenever the underlying data changes, ensuring that "up to date" pricing is readily available.
+This release provides a major overhaul for how pricing data is managed. The new pricing system calculates various pricing information (such as BOM cost or purchase price range) and caches this data in the database. This means that the efficiency of accessing pricing data in real time is greatly improved. For complex bills of material, viewing pricing data was (before this update) extremely prohibitive, due to the recursive calculations which were being performed "on the fly". The new architecture makes use of the background worker to recalculate pricing information whenever the underlying data changes, ensuring that "up to date" pricing is readily available.
 
 ![BOM Pricing](/assets/blog/bom-pricing.png)
 
