--- a/_posts/2023-09-26-kicad.md
+++ b/_posts/2023-09-26-kicad.md
@@ -5,7 +5,7 @@ title: KiCad Integration
 
 In the world of electronics design and PCB (Printed Circuit Board) development, KiCad has been a go-to tool for engineers and hobbyists alike. KiCad is a very popular and capable tool, and has continually evolved to meet the changing needs of its users.
 
-Ever since InvenTree was first [*shamlessly cross-promoted*](https://forum.kicad.info/t/inventory-management-open-source/) on the KiCad forums, I have been searching for a clean way to connect KiCad and InvenTree together. This has been a [popular topic of discussion](https://github.com/inventree/InvenTree/discussions/4133) with other InvenTree users too!
+Ever since InvenTree was first [*shamelessly cross-promoted*](https://forum.kicad.info/t/inventory-management-open-source/) on the KiCad forums, I have been searching for a clean way to connect KiCad and InvenTree together. This has been a [popular topic of discussion](https://github.com/inventree/InvenTree/discussions/4133) with other InvenTree users too!
 
 InvenTree contains all of my part definition data and inventory management information, such as part parameters, supplier data, etc. If only there was a simply way to get all of that information directly out of InvenTree and into KiCad.
 
@@ -13,7 +13,7 @@ Well now, with great excitement, there is! InvenTree data can now be used as a f
 
 ### HTTP Library Support
 
-In September 2023, [HTTP Libary Support](https://gitlab.com/kicad/code/kicad/-/merge_requests/1679) was added to the KiCad application.
+In September 2023, [HTTP Library Support](https://gitlab.com/kicad/code/kicad/-/merge_requests/1679) was added to the KiCad application.
 
 This feature allows KiCad library data to be retrieved from an external API endpoint, rather than a library file on the local filesystem. This is a groundbreaking change which allows us to leverage InvenTree's existing capabilities to provide a fully-featured integration between the two software packages.
 
