--- a/_posts/2023-01-02-upcoming.md
+++ b/_posts/2023-01-02-upcoming.md
@@ -33,7 +33,7 @@ Our new website (inventree.org) is now up and running! Thanks to @matmair in par
 
 ### Translations
 
-[Translations]({% link contribute.md %}#translate) for the InevnTree project continue to grow, thanks to our vibrant community of users. Thanks to the [crowdin project](https://crowdin.com) which makes this possible.
+[Translations]({% link contribute.md %}#translate) for the InvenTree project continue to grow, thanks to our vibrant community of users. Thanks to the [crowdin project](https://crowdin.com) which makes this possible.
 
 ### Users
 
@@ -89,6 +89,6 @@ Check out the [documentation project](https://github.com/inventree/inventree-doc
 
 The InvenTree project has grown substantially over the last year. While we now have an active user community, we still only have a very small core development team, trying to keep on top of all the great ideas you have.
 
-If you have found InvenTree to be a useful piece of software, especially if you are using it for your business, please consider [sponsoring the project](https://github.com/sponsors/inventree/). Sponsorship allows the devs to provide more of their (quite precious) time to the project, which benefits everyone.
+If you have found InvenTree to be a useful piece of software, especially if you are using it for your business, please consider [sponsoring the project](https://github.com/sponsors/inventree/). Sponsorship allows the developers to provide more of their (quite precious) time to the project, which benefits everyone.
 
 You can provide a one-off or monthly sponsorship, or sponsor a specific feature or plugin!
