--- a/blog/2023-12-15-0.13.0.md
+++ b/blog/2023-12-15-0.13.0.md
@@ -128,4 +128,4 @@ Moving forward, we will be releasing stable versions on a quicker release cycle.
 
 ## Deploying InvenTree
 
-If you are new to the InvenTree project, there are multiple ways to deploy InvenTree for your own use. Please refer to the [deployment guide]({% link deploy.md %}) for more information.
+If you are new to the InvenTree project, there are multiple ways to deploy InvenTree for your own use. Please refer to the [deployment guide](/deploy/) for more information.
