--- a/_posts/2024-01-13-upcoming.md
+++ b/_posts/2024-01-13-upcoming.md
@@ -65,7 +65,9 @@ Moving forward, we will be tagging specific issues with a *funding* label, which
 
 Funds allocated to a specific issue will be shared between the developers who work on the issue, as well as the maintainers of the InvenTree project.
 
-We are making use of the [polar.sh](https://polar.sh) platform to manage the funding process. Please note that we are not affiliated with polar.sh, we are simply using it as a tool to manage the funding process. 
+We are making use of the [polar.sh](https://polar.sh) platform to manage the funding process. Please note that we are not affiliated with polar.sh, we are simply using it as a tool to manage the funding process.
+
+We will *not* be asking for funding for every issue, and we will continue to work on issues which are not funded!
 
 ### User Interface Refactor
 
