--- a/_posts/2024-02-28-0.14.0.md
+++ b/_posts/2024-02-28-0.14.0.md
@@ -15,10 +15,11 @@ In [PR 6173](https://github.com/inventree/InvenTree/pull/6173), InvenTree has be
 
 Most (hopefully *all*) of the required changes have been made, but there may be some edge cases which have been missed. If you encounter any issues with the Django 4.2 update, please report them on [our github page](https://github.com/inventree/inventree).
 
-!!! tip "Django Release Notes"
-    You should also refer to the [Django 4.2 release notes](https://docs.djangoproject.com/en/5.0/releases/4.2/) for a full list of changes.
+You should also refer to the [Django 4.2 release notes](https://docs.djangoproject.com/en/5.0/releases/4.2/) for a full list of changes.
 
-### Site Changes
+### Site Access Changes
+
+Django 4.2 has introduced some changes to how cross-site protection is handled. Your existing InvenTree installation may require some changes to continue to operate as expected. In particular, the `CORS` and `CSRF` settings have been made more strict by default. Refer to the [server access configuration guide](https://docs.inventree.org/en/latest/start/config/#server-access) for instructions on which settings will need to be updated.
 
 ### Multi Site Support
 
@@ -36,11 +37,8 @@ In 0.14.0, the test result system has been updated to use a proper database rela
 
 This change should be transparent to most users, but if you have been using the test result system in a custom way, you may need to update your code to reflect the new database structure.
 
-In particular, any external systems which upload test results via the InvenTree API will need to be examined and tested. 
-
-!!! info "API Compatibility"
-    The changes to the API have been implemented to ensure backwards compatibility with existing systems.
-
+In particular, any external systems which upload test results via the InvenTree API will need to be examined and tested. While the changes to the API have been implemented to ensure backwards compatibility with existing systems, it is possible that some edge cases have been missed.
+    
 ### Docker Compose
 
 In [PR 6551](https://github.com/inventree/InvenTree/pull/6551) we have made a significant change to the way that InvenTree is deployed using Docker Compose. Previously, the provided docker compose template used [nginx](https://nginx.org/) as a reverse proxy for the InvenTree web server, and for serving static and media files.
@@ -69,7 +67,54 @@ If you encounter any issues updating your devcontainer setup, try deleting the `
 
 ## New Features
 
+A significant number of new features have been added to InvenTree in this release. Some of the highlights include:
+
+### Machine Integration
+
+[PR 4824](https://github.com/inventree/InvenTree/pull/4824) provides a new machine integration system for InvenTree. This system allows InvenTree to communicate with external machines, and to track the status of those machines. This is a significant new feature which will allow InvenTree to be used in a wider range of manufacturing environments.
+
+### Tracing Support
+
+[PR 6211](https://github.com/inventree/InvenTree/pull/6211) adds support for OpenTelemetry tracing. This allows InvenTree to be integrated with a wide range of tracing systems, and provides a powerful tool for monitoring and debugging InvenTree installations.
+
+### Enhanced Validation
+
+Enhanced custom validation is implemented in [PR 6410](https://github.com/inventree/InvenTree/pull/6410). This addition allows for more comprehensive validation of models by integrated plugins. Refer to the [updated validation plugin docs](https://docs.inventree.org/en/latest/extend/plugins/validation/) for more information.
+
+### API Documentation
+
+Multiple PR (including [PR 6319](https://github.com/inventree/InvenTree/pull/6319)) have been submitted to enable the generation of API documentation. This will allow for the automatic generation of API documentation, and will make it easier for developers to understand and use the InvenTree API. In fact, we now track all API changes in a [separate repository](https://github.com/inventree/schema/).
+
+### Plugin Error Logging
+
+We have improved error logging for plugin code - see [PR 6455](https://github.com/inventree/InvenTree/pull/6455). This will make it easier to debug issues with custom plugins.
+
+### Unit System Updates
+
+Multiple new features have been added to the physical unit management  system in InvenTree. 
+
+- [PR 6539](https://github.com/inventree/InvenTree/pull/6539) adds support for engineering units.
+- [PR 6584](https://github.com/inventree/InvenTree/pull/6584) adds support for temperature units.
+
+### And More
+
+Refer to the [release notes](#release-notes) for a full list of changes in this release!
+
+## React Interface
+
+Development of the new React frontend interface continues at a rapid pace. The new interface is designed to replace the existing frontend, and will provide a modern, responsive, and fast user interface for InvenTree.
+
+The new interface is not yet feature complete, but is rapidly approaching a point where it can be used for day-to-day operations. We are very excited about the new interface, and we are looking forward to sharing it with the community.
+
+The new interface is enabled by default, and can be accessed by navigating to `/platform/` on your InvenTree installation. If you encounter any issues with the new interface, please report them on our github page!
+
+### Developers Wanted
+
+We are looking for developers to help with the React frontend. If you are interested in contributing to the project, please get in touch! There are many outstanding issues which need to be addressed, and many would make good starter issues - perfect for new contributors!
+
 ## Bug Fixes
+
+As always, this release includes a number of bug fixes and performance improvements. We would like to thank everyone who has contributed to the project by reporting issues, and by submitting pull requests to fix them.
 
 ## New Contributors
 
@@ -90,3 +135,9 @@ In this release we have added support for 1 new language:
 If you would like to help translate InvenTree into your language, please [read our translation guide](https://inventree.org/contribute.html#translate). We currently support 32 languages, but there are many more that we would like to support!
 
 ## Release Notes
+
+For a full list of changes, please see the [release notes on GitHub](https://github.com/inventree/InvenTree/releases/tag/0.14.0).
+
+## Deploying InvenTree
+
+If you are new to the InvenTree project, there are multiple ways to deploy InvenTree for your own use. Please refer to the [deployment guide]({% link deploy.md %}) for more information.
